--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ h1{
 }
 
 .header {
-  font-size: larger;
+  font-size: 0.9rem;
   font-weight: bold;
   text-transform: uppercase;
   padding: 20px;
